--- a/Week-2/Assignment-2/index.html
+++ b/Week-2/Assignment-2/index.html
@@ -4,7 +4,6 @@
   <meta charset= "utf-8"/>
   <title>Week2_Assignment2</title>
   <link rel="stylesheet" href="style.css">
-  <script src="function.js"></script>
 </head>
 
 <body class="page">
@@ -19,9 +18,9 @@
   </ul> 
 </nav>
   
-<button onclick="ShowGreet()" class="intro" id="welcome"> 
+<section class="intro" id="welcome"> 
   Welcome Message
-</button>
+</section>
   
 <section class = "title">
   Section Title
@@ -40,7 +39,7 @@
   </div>
   
 
-  <div onclick= "ShowMore()" class="button-container">
+  <div class="button-container">
     <button>Call to Action</button>
   </div>
 
@@ -55,6 +54,6 @@
     </div>
   </div>
 </section>
-  
+<script src="function.js"></script>
 </body>  
 </html>  
